--- a/Booksky.css
+++ b/Booksky.css
@@ -1,1 +1,128 @@
-To add the styles for booksky.
+// To add the styles for booksky.
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400; /* Regular */
+}
+
+
+.navbar{
+    background-color: #fd6569;
+    padding: 10px;
+}
+
+.container{
+    padding: 10px;
+    margin: 30px;
+    
+}
+.book_container{
+    padding: 15px;
+    width: 25%;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    display: inline-block;
+    margin: 5px;
+    vertical-align: top;
+}
+.book_container > h2{
+    color: #fd6569;
+
+}
+.book_container>button{
+    background-color: #fd6569;
+    color: black;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.add_button{
+    background-color: #fd6569;
+    color: black;
+    font-size: 40px;
+    padding: 20px 30px;
+    border: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    border-radius: 50%;
+}
+.popup_overlay{
+    background-color: black;
+    opacity: 0.8;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+
+}
+
+.popup_book{
+    background-color:#fd6569;
+    color: black;
+    border-radius: 15px;
+    width: 40%;
+    padding: 40px;
+    position:absolute;
+    top: 20%;
+    left: 30%;
+    z-index: 2;
+    display: none;
+}
+.popup_book input{
+    background: transparent;
+    width: 100%;
+    margin: 5px;
+    padding: 5px;
+    border: none;
+    font-size: 20px;
+    border-bottom: 2px solid black;
+    color: white;
+}
+
+.popup_book textarea{
+    background: transparent;
+    width: 100%;
+    margin: 5px;
+    padding: 5px;
+    font-size: 20px;
+    border: 2px solid black;
+    color: white;
+}
+.popup_book input::placeholder{
+    color: black;
+}
+.popup_book textarea::placeholder{
+    color: black;
+}
+.popup_book button{
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+
+}
+.popup_book input:focus{
+    outline: none;
+}
+.popup_book textarea:focus{
+    outline: none;
+}
+
+
+
+
+
+
